--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Utility Bot | Made by g3orgecristian</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://example.com/favicon.png">
+    <link rel="icon" type="image/png" href="https://g3orgecristian.github.io/assets/media/utilitybot-logo-square.png">
 
     <style>
         body {
@@ -191,3 +191,4 @@
     </div>
 </body>
 </html>
+
